--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "author": "Jeffrey Way",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.1",
@@ -64,11 +63,14 @@
     "yargs": "^8.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.2",
     "ava": "^0.19.1",
     "mock-fs": "^4.3.0",
     "mock-require": "^2.0.2",
     "nyc": "^10.3.2",
-    "sinon": "^2.3.2"
+    "sinon": "^2.3.2",
+    "smart-banner-webpack-plugin": "^3.0.1",
+    "wp-pot": "^1.3.3"
   },
   "engines": {
     "node": ">=6.0.0"
