--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "author": "Jeffrey Way",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.1",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "chokidar": "^1.7.0",
     "clean-css": "^4.1.3",
     "concatenate": "0.0.2",
@@ -62,18 +64,16 @@
     "webpack-dev-server": "^2.5.1",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
-    "yargs": "^8.0.1"
+    "yargs": "^8.0.1",
+    "smart-banner-webpack-plugin": "^3.0.1",
+    "wp-pot": "^1.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
     "ava": "^0.19.1",
-    "babel-plugin-dynamic-import-node": "^1.0.2",
     "mock-fs": "^4.3.0",
     "mock-require": "^2.0.2",
     "nyc": "^10.3.2",
-    "sinon": "^2.3.2",
-    "smart-banner-webpack-plugin": "^3.0.1",
-    "wp-pot": "^1.3.3"
+    "sinon": "^2.3.2"
   },
   "engines": {
     "node": ">=6.0.0"
