--- a/package.json
+++ b/package.json
@@ -31,49 +31,49 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.5.1",
     "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-preset-env": "^1.6.0",
     "chokidar": "^1.7.0",
-    "clean-css": "^4.1.3",
-    "concatenate": "0.0.2",
-    "css-loader": "^0.28.3",
+    "clean-css": "^4.1.7",
+    "concatenate": "^0.0.2",
+    "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "dotenv-expand": "^4.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^3.0.1",
+    "fs-extra": "^4.0.0",
     "glob": "^7.1.2",
     "html-loader": "^0.4.5",
     "img-loader": "^2.0.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
-    "uglify-js": "^2.8.28",
+    "postcss-loader": "^2.0.6",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "smart-banner-webpack-plugin": "^3.0.1",
+    "style-loader": "^0.18.2",
+    "uglify-js": "^3.0.25",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "vue-loader": "^12.1.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.4.2",
     "webpack": "^3.3.0",
     "webpack-chunk-hash": "^0.4.0",
-    "webpack-dev-server": "^2.5.1",
+    "webpack-dev-server": "^2.6.0",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
-    "yargs": "^8.0.1",
-    "smart-banner-webpack-plugin": "^3.0.1",
-    "wp-pot": "^1.3.3"
+    "wp-pot": "^1.3.3",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
-    "mock-fs": "^4.3.0",
+    "ava": "^0.21.0",
+    "mock-fs": "^4.4.1",
     "mock-require": "^2.0.2",
-    "nyc": "^10.3.2",
-    "sinon": "^2.3.2"
+    "nyc": "^11.0.3",
+    "sinon": "^2.3.8"
   },
   "engines": {
     "node": ">=6.0.0"
