--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "mock-fs": "^4.4.1",
     "mock-require": "^2.0.2",
     "nyc": "^11.0.3",
-    "sinon": "^2.3.8"
+    "sinon": "^2.3.8",
+    "smart-banner-webpack-plugin": "^3.0.1"
   },
   "engines": {
     "node": ">=6.0.0"
