--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "smart-banner-webpack-plugin": "^3.0.1",
     "uglify-js": "^3.0.25",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "vue-loader": "^12.2.2",
@@ -72,8 +73,7 @@
     "mock-fs": "^4.4.1",
     "mock-require": "^2.0.2",
     "nyc": "^11.0.3",
-    "sinon": "^2.3.8",
-    "smart-banner-webpack-plugin": "^3.0.1"
+    "sinon": "^2.3.8"
   },
   "engines": {
     "node": ">=6.0.0"
