--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chokidar": "^1.7.0",
     "clean-css": "^4.1.7",
     "concatenate": "^0.0.2",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "dotenv": "^4.0.0",
     "dotenv-expand": "^4.0.1",
@@ -54,8 +55,8 @@
     "postcss-loader": "^2.0.6",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
     "smart-banner-webpack-plugin": "^3.0.1",
+    "style-loader": "^0.18.2",
     "uglify-js": "^3.0.25",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "vue-loader": "^12.2.2",
