--- a/package.json
+++ b/package.json
@@ -31,17 +31,21 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.0",
     "chokidar": "^1.7.0",
     "clean-css": "^4.1.3",
+    "compression-webpack-plugin": "^1.0.0",
     "concatenate": "^0.0.2",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.3",
     "dotenv": "^4.0.0",
     "dotenv-expand": "^4.0.1",
+    "exports-loader": "^0.6.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -60,11 +64,11 @@
     "style-loader": "^0.18.1",
     "uglify-js": "^2.8.28",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "vue-loader": "^12.2.2",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.4.0",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.5.0",
     "webpack-chunk-hash": "^0.4.0",
-    "webpack-dev-server": "^2.5.0",
+    "webpack-dev-server": "^2.5.1",
     "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0",
     "wp-pot": "^1.3.3",
