--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wp-mix",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "WP Mix is a fork of Laravel Mix which is an elegant wrapper around Webpack for the 80% use case.",
   "main": "src/index.js",
   "scripts": {
     "webpack": "NODE_ENV=development webpack --progress --hide-modules",
     "dev": "NODE_ENV=development webpack --watch --progress --hide-modules",
-    "hmr": "NODE_ENV=development webpack-dev-server --inline --hot",
+    "hmr": "NODE_ENV=development webpack-dev-server --inline --hot --proxy=http://wp.dev",
     "production": "NODE_ENV=production webpack --progress --hide-modules",
     "test": "sudo nyc ava --verbose",
     "posttest": "nyc report --reporter=html"
@@ -28,47 +28,48 @@
   "author": "Emran Ahmed",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.5.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-vue-app": "^1.3.2",
     "chokidar": "^1.7.0",
-    "clean-css": "^4.1.3",
-    "compression-webpack-plugin": "^1.0.0",
+    "clean-css": "^4.1.9",
+    "compression-webpack-plugin": "^1.0.1",
     "concatenate": "^0.0.2",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.3",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "dotenv-expand": "^4.0.1",
     "exports-loader": "^0.6.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "fs-extra": "^3.0.1",
+    "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
-    "html-loader": "^0.4.5",
+    "html-loader": "^0.5.1",
     "img-loader": "^2.0.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "modernizr-webpack-plugin": "^1.0.6",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.5",
-    "sass-resources-loader": "^1.3.0",
-    "style-loader": "^0.18.1",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.9",
+    "resolve-url-loader": "^2.0.0",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
+    "style-loader": "^0.19.0",
     "uglify-js": "^2.8.28",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.5.0",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.9",
+    "webpack": "^3.6.0",
     "webpack-chunk-hash": "^0.4.0",
-    "webpack-dev-server": "^2.5.1",
-    "webpack-merge": "^4.1.0",
+    "webpack-dev-server": "^2.9.5",
+    "webpack-merge": "^4.1.1",
     "webpack-notifier": "^1.5.0",
-    "wp-pot": "^1.3.3",
+    "wp-pot": "^1.3.5",
     "yargs": "^8.0.1"
   },
   "devDependencies": {
